Fixing findbugs:DM_NUMBER_CTOR -  Performance - Method invokes inefficient Number constructor; use static valueOf instead